Allow template-defined entries that cover multiple grid positions (in a box shape)