@@ -3,7 +3,7 @@ package com.mraof.minestuck.world.gen.structure;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.mojang.datafixers.util.Pair;
+import com.google.common.collect.Streams;
 import com.mraof.minestuck.Minestuck;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
@@ -23,8 +23,8 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.*;
+import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.IntStream;
 
 /**
  * Contains types for describing pieces and how they connect, as well as builders for defining data of these types.
@@ -44,26 +44,6 @@ public final class WFCData
 				Direction.SOUTH, side,
 				Direction.WEST, side
 		));
-	}
-	
-	public static EntryProvider symmetricPillarPieces(Function<BlockPos, StructurePiece> constructor, String name, int height,
-													  ConnectorType down, ConnectorType up, List<ConnectorType> sides)
-	{
-		if(sides.size() != height)
-			throw new IllegalArgumentException("Number of sides must match height");
-		
-		List<Pair<ConnectorType, ConnectorType>> verticalConnections = IntStream.range(0, height - 1).mapToObj(y -> {
-			ConnectorType connector = new ConnectorType(name + "/vertical_" + y);
-			return Pair.of(connector, connector);
-		}).toList();
-		
-		ImmutableList.Builder<PieceEntry> entriesBuilder = ImmutableList.builder();
-		entriesBuilder.add(symmetricPiece(constructor, down, verticalConnections.get(0).getFirst(), sides.get(0)));
-		for(int y = 1; y < height - 1; y++)
-			entriesBuilder.add(symmetricPiece(pos -> null, verticalConnections.get(y - 1).getSecond(), verticalConnections.get(y).getFirst(), sides.get(y)));
-		entriesBuilder.add(symmetricPiece(pos -> null, verticalConnections.get(height - 2).getSecond(), up, sides.get(height - 1)));
-		
-		return new MultiPieceEntry(entriesBuilder.build(), verticalConnections);
 	}
 	
 	private static Map<Direction, ConnectorType> rotateConnectors(Map<Direction, ConnectorType> connections, Rotation rotation)
@@ -129,16 +109,6 @@ public final class WFCData
 		}
 	}
 	
-	public record MultiPieceEntry(Collection<PieceEntry> entries, Collection<Pair<ConnectorType, ConnectorType>> connections) implements EntryProvider
-	{
-		@Override
-		public void build(EntryBuilderContext context)
-		{
-			this.connections.forEach(pair -> context.connectionsBuilder().connect(pair.getFirst(), pair.getSecond()));
-			context.entriesBuilder().add(this.entries);
-		}
-	}
-	
 	public record TemplateEntry(ResourceLocation templateId, List<Rotation> rotations) implements EntryProvider
 	{
 		public static EntryProvider symmetric(ResourceLocation templateId)
@@ -164,7 +134,7 @@ public final class WFCData
 			TemplateEntryBuilder
 					.init(this.templateId, template.getSize(), context.pieceSize())
 					.flatMap(builder -> {
-						loadConnectorsFromJigsaws(this.templateId, template, builder);
+						loadConnectorsFromJigsaws(this.templateId, template, context.pieceSize(), builder);
 						return builder.verify();
 					})
 					.ifPresent(loadedEntry -> {
@@ -173,7 +143,7 @@ public final class WFCData
 					});
 		}
 		
-		private static void loadConnectorsFromJigsaws(ResourceLocation templateId, StructureTemplate template, TemplateEntryBuilder builder)
+		private static void loadConnectorsFromJigsaws(ResourceLocation templateId, StructureTemplate template, WFC.PieceSize pieceSize, TemplateEntryBuilder builder)
 		{
 			for(StructureTemplate.StructureBlockInfo blockInfo : template.filterBlocks(BlockPos.ZERO, new StructurePlaceSettings(), Blocks.JIGSAW, false))
 			{
@@ -191,13 +161,11 @@ public final class WFCData
 				}
 				
 				ConnectorType connectorType = new ConnectorType(connectorId);
+				WFC.PiecePos pos = new WFC.PiecePos(blockInfo.pos().getX() / pieceSize.width(),
+						blockInfo.pos().getY() / pieceSize.height(), blockInfo.pos().getZ() / pieceSize.width());
 				Direction direction = blockInfo.state().getValue(JigsawBlock.ORIENTATION).front();
 				
-				if(builder.connectors.put(direction, connectorType) != null)
-				{
-					LOGGER.error("Template {} has multiple jigsaws for the same side ({})", templateId, direction);
-					builder.failed = false;
-				}
+				builder.put(pos, direction, connectorType);
 			}
 		}
 	}
@@ -205,29 +173,47 @@ public final class WFCData
 	private static final class TemplateEntryBuilder
 	{
 		private final ResourceLocation templateId;
+		private final WFC.Dimensions templateDimensions;
 		
-		final Map<Direction, ConnectorType> connectors = new HashMap<>();
+		final Map<WFC.PiecePos, Map<Direction, ConnectorType>> connectors = new HashMap<>();
 		boolean failed = false;
 		
-		private TemplateEntryBuilder(ResourceLocation templateId)
+		private TemplateEntryBuilder(ResourceLocation templateId, WFC.Dimensions templateDimensions)
 		{
 			this.templateId = templateId;
+			this.templateDimensions = templateDimensions;
 		}
 		
 		static Optional<TemplateEntryBuilder> init(ResourceLocation templateId, Vec3i templateSize, WFC.PieceSize pieceSize)
 		{
-			if(templateSize.getX() != pieceSize.width() || templateSize.getY() != pieceSize.height() || templateSize.getZ() != pieceSize.width())
+			if(templateSize.getX() % pieceSize.width() != 0 || templateSize.getY() % pieceSize.height() != 0 || templateSize.getZ() % pieceSize.width() != 0)
 			{
-				LOGGER.error("Template {} of size {} does not have the right size.", templateId, templateSize);
+				LOGGER.error("Template {} of size {} is not a multiple of {}", templateId, templateSize, pieceSize);
 				return Optional.empty();
 			}
+			WFC.Dimensions dimensions = new WFC.Dimensions(templateSize.getX() / pieceSize.width(),
+					templateSize.getY() / pieceSize.height(), templateSize.getZ() / pieceSize.width());
+			return Optional.of(new TemplateEntryBuilder(templateId, dimensions));
+		}
+		
+		void put(WFC.PiecePos pos, Direction direction, ConnectorType connectorType)
+		{
+			if(!this.templateDimensions.isOnEdge(pos, direction))
+			{
+				LOGGER.warn("Connector {} in template {} is not at the edge", connectorType, this.templateId);
+				return;
+			}
 			
-			return Optional.of(new TemplateEntryBuilder(templateId));
+			if(this.connectors.computeIfAbsent(pos, ignored -> new HashMap<>()).put(direction, connectorType) != null)
+			{
+				LOGGER.error("Template {} has multiple jigsaws for the same side ({})", this.templateId, direction);
+				this.failed = false;
+			}
 		}
 		
 		Optional<LoadedTemplateEntry> verify()
 		{
-			List<Direction> missingDirections = Arrays.stream(Direction.values()).filter(key -> !this.connectors.containsKey(key)).toList();
+			List<Direction> missingDirections = Arrays.stream(Direction.values()).filter(this::isConnectorMissingOnSide).toList();
 			if(!missingDirections.isEmpty())
 			{
 				LOGGER.error("Template {} is missing connector type for the following sides: {}", this.templateId, missingDirections);
@@ -237,17 +223,68 @@ public final class WFCData
 			if(this.failed)
 				return Optional.empty();
 			
-			return Optional.of(new LoadedTemplateEntry(this.templateId, Map.copyOf(this.connectors)));
+			return Optional.of(new LoadedTemplateEntry(this.templateId, this.templateDimensions,
+					this.connectors.entrySet().stream().map(entry -> Map.entry(entry.getKey(), Map.copyOf(entry.getValue())))
+							.collect(ImmutableMap.toImmutableMap(Map.Entry::getKey, Map.Entry::getValue))));
+		}
+		
+		private boolean isConnectorMissingOnSide(Direction direction)
+		{
+			return Streams.stream(this.templateDimensions.iterateEdge(direction))
+					.anyMatch(pos -> !this.connectors.getOrDefault(pos, Collections.emptyMap()).containsKey(direction));
 		}
 	}
 	
-	private record LoadedTemplateEntry(ResourceLocation templateId, Map<Direction, ConnectorType> connectors)
+	private record LoadedTemplateEntry(ResourceLocation templateId, WFC.Dimensions templateDimensions, Map<WFC.PiecePos, Map<Direction, ConnectorType>> edgeConnectors)
 	{
 		void build(Rotation rotation, EntryBuilderContext context)
 		{
-			Function<BlockPos, StructurePiece> constructor = templateConstructor(context.pieceSize(), rotation, context.templateManager());
-			PieceEntry entry = new PieceEntry(constructor, rotateConnectors(this.connectors, rotation));
-			context.entriesBuilder().add(entry);
+			Map<Direction.Axis, Map<WFC.PiecePos, ConnectorType>> connectors = new EnumMap<>(Direction.Axis.class);
+			
+			BiFunction<Direction.Axis, WFC.PiecePos, ConnectorType> innerConnectorGetter = (axis, piecePos) ->
+					connectors.computeIfAbsent(axis, ignored -> new HashMap<>())
+							.computeIfAbsent(piecePos, ignored -> addNewConnector(piecePos, axis, rotation, context.connectionsBuilder()));
+			
+			for(WFC.PiecePos piecePos : this.templateDimensions.iterateAll())
+			{
+				Function<BlockPos, StructurePiece> constructor;
+				if(piecePos.x() == 0 && piecePos.y() == 0 && piecePos.z() == 0)
+					constructor = templateConstructor(context.pieceSize(), rotation, context.templateManager());
+				else
+					constructor = pos -> null;
+				
+				Map<Direction, ConnectorType> entryConnectors = Map.of(
+						Direction.DOWN, templateDimensions.isOnEdge(piecePos, Direction.DOWN)
+								? edgeConnectors().get(piecePos).get(Direction.DOWN)
+								: innerConnectorGetter.apply(Direction.Axis.Y, new WFC.PiecePos(piecePos.x(), piecePos.y() - 1, piecePos.z())),
+						Direction.UP, templateDimensions.isOnEdge(piecePos, Direction.UP)
+								? edgeConnectors().get(piecePos).get(Direction.UP)
+								: innerConnectorGetter.apply(Direction.Axis.Y, piecePos),
+						Direction.NORTH, templateDimensions.isOnEdge(piecePos, Direction.NORTH)
+								? edgeConnectors().get(piecePos).get(Direction.NORTH)
+								: innerConnectorGetter.apply(Direction.Axis.Z, new WFC.PiecePos(piecePos.x(), piecePos.y(), piecePos.z() - 1)),
+						Direction.EAST, templateDimensions.isOnEdge(piecePos, Direction.EAST)
+								? edgeConnectors().get(piecePos).get(Direction.EAST)
+								: innerConnectorGetter.apply(Direction.Axis.X, piecePos),
+						Direction.SOUTH, templateDimensions.isOnEdge(piecePos, Direction.SOUTH)
+								? edgeConnectors().get(piecePos).get(Direction.SOUTH)
+								: innerConnectorGetter.apply(Direction.Axis.Z, piecePos),
+						Direction.WEST, templateDimensions.isOnEdge(piecePos, Direction.WEST)
+								? edgeConnectors().get(piecePos).get(Direction.WEST)
+								: innerConnectorGetter.apply(Direction.Axis.X, new WFC.PiecePos(piecePos.x() - 1, piecePos.y(), piecePos.z()))
+				);
+				
+				PieceEntry entry = new PieceEntry(constructor, rotateConnectors(entryConnectors, rotation));
+				context.entriesBuilder().add(entry);
+			}
+		}
+		
+		private ConnectorType addNewConnector(WFC.PiecePos pos, Direction.Axis axis, Rotation rotation, ConnectionsBuilder builder)
+		{
+			ConnectorType newConnector = new ConnectorType(templateId.withSuffix("/" + pos.x() + "_" + pos.y() + "_" + pos.z()
+					+ "_" + axis.getSerializedName() + "_" + rotation.getSerializedName()));
+			builder.connectSelf(newConnector);
+			return newConnector;
 		}
 		
 		private Function<BlockPos, StructurePiece> templateConstructor(WFC.PieceSize pieceSize, Rotation rotation, StructureTemplateManager templateManager)
